k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practica-ingress
  namespace: devops-lab
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          # BACKEND (Debe ir primero por ser la ruta más específica)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: practica-backend
                port:
                  number: 3000

          # FRONTEND (Ruta raíz al final)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: practica-frontend
                port:
                  number: 80
